unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/nbavs__Hourly_Call_Reporting__c.object-meta.xml
<CustomObject>
    <label>Hourly Call Reporting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hourly Call Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>