unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__AVS_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AVS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Natterbox User ID. This may be null to record data that is not associated with any Natterbox User ID</description>
    <label>Natterbox User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipName>Hourly_Call_Reportings</relationshipName>
    <type>Lookup</type>
</CustomField>