unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Day__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Day__c</fullName>
    <description>Day of the month for the hourly call record</description>
    <formula>DAY(DATEVALUE(nbavs__Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Day of the month for the hourly call record</inlineHelpText>
    <label>Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>