unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Day_Of_Week__c</fullName>
    <description>Text representation of day of week</description>
    <formula>CASE(
MOD(DATEVALUE(nbavs__Time__c) - DATE(1900, 1, 7), 7),
0, &quot;Sunday&quot;,
1, &quot;Monday&quot;,
2, &quot;Tuesday&quot;,
3, &quot;Wednesday&quot;,
4, &quot;Thursday&quot;,
5, &quot;Friday&quot;,
6, &quot;Saturday&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Text representation of day of week</inlineHelpText>
    <label>Day Of Week</label>
    <type>Text</type>
</CustomField>