unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__External_Calls__c.field-meta.xml
<CustomField>
    <fullName>nbavs__External_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of external calls that have passed through the organisation.</description>
    <inlineHelpText>How many external calls has my organisation relayed</inlineHelpText>
    <label>External Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>