unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__External_Talk_Seconds__c.field-meta.xml
<CustomField>
    <fullName>nbavs__External_Talk_Seconds__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of seconds of talk time external calls that have relayed through the organisation have incurred</description>
    <inlineHelpText>How many seconds of talk time have been incurred by external calls relayed by my organisation</inlineHelpText>
    <label>External Talk Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>