unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Group__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>nbavs__Group__c</referenceTo>
    <relationshipLabel>Hourly Call Reporting</relationshipLabel>
    <relationshipName>Hourly_Call_Reporting</relationshipName>
    <type>Lookup</type>
</CustomField>