unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Hour__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Hour__c</fullName>
    <description>Hour the hourly record relates to</description>
    <formula>HOUR(TIMEVALUE(nbavs__Time__c) + (nbavs__UserTimezoneOffset__c * 60 * 60 * 1000))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hour the hourly record relates to</inlineHelpText>
    <label>Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>