unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Inbound_Calls__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Inbound_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of calls that have been received by the organisation from the outside world, regardless of whether they have been connected or not to a user. No User ID will ever be associated with this call statistic, as it purely measures inbound call flow.</description>
    <inlineHelpText>How many inbound calls has my organisation received</inlineHelpText>
    <label>Inbound Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>