unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Inbound_Connected_Calls_Primary_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Inbound_Connected_Calls_Primary_User__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of calls that have been received by the organisation from the outside world, which have then been connected to a User.  This statistic only records where the user has not transferred the call, i.e. the user (recipient) actually picked up the initial call.</description>
    <inlineHelpText>How many inbound calls have I received where I picked up the call as the initial recipient</inlineHelpText>
    <label>Inbound Calls as Primary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>