unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Inbound_Connected_Calls_Subsequent_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Inbound_Connected_Calls_Subsequent_User__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of calls that have been received by the organisation from the outside world, which have then been connected to a User via a transfer from another user. This statistic only records where the user has received the call via a transfer</description>
    <inlineHelpText>How many inbound calls have I received where I picked up the call as the initial recipient</inlineHelpText>
    <label>Inbound Calls as Transferree</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>