unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Inbound_Hunt_Seconds__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Inbound_Hunt_Seconds__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of seconds of hunt time incurred by calls received by the organisation from the outside world, regardless of whether they have been connected or not to a User. No Natterbox User will ever be associated with this call statistic, as purely measures inbound traffic.</description>
    <inlineHelpText>How many seconds have callers calling into my organisation been spending waiting to talk to a real person</inlineHelpText>
    <label>Inbound Hunt Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>