unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Inbound_Talk_Seconds_Primary_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Inbound_Talk_Seconds_Primary_User__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of seconds of talk time incurred on calls received by the organisation from the outside world, which have then been connected to a User. This statistic only records where the user has not transferred the call, i.e. the user (recipient) actually picked up the initial call and relates to the talk time incurred by the user</description>
    <inlineHelpText>How many seconds have I been talking to callers calling into my organisation where I picked up the call as the initial recipient</inlineHelpText>
    <label>Inbound Talk Seconds as Primary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>