unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Internal_Call_To_Subsequent_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Internal_Call_To_Subsequent_User__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of internal calls that were established from one user to another within the organisation, from the perspective of the To party, and where the To party became a transferree, i.e. the call was transferred to them. Specifically this statistic only includes the transferred calls, and does not include any initial calls that the user may have received.</description>
    <inlineHelpText>How many calls did I take part in to other internal users in my organisation as a logical To party, but where the call had been transferred to me</inlineHelpText>
    <label>Internal To Calls as Transferree</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>