unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Internal_Calls_To_Primary_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Internal_Calls_To_Primary_User__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of internal calls that were established from one user to another within the organisation, from the perspective of the To party. Specifically this statistic only includes calls where the user was the first to pick up a call  and doesn&#39;t include any subsequent dialogues/ calls where the user had a call transferred to them.</description>
    <inlineHelpText>How many calls did I receive from another internal user in my organisation, where the call was not transferred</inlineHelpText>
    <label>Internal To Calls as Primary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>