unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Internal_Talk_Sec_From_Subsequent_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Internal_Talk_Sec_From_Subsequent_User__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of seconds that have been spent talking on internal calls which have been established from one user to another within the organisation, from the perspective of the From party, and where the From party became a transferree, i.e. the call was transferred to them. Specifically this statistic only includes the transferred calls, and does not include any initial calls that the user may have made.</description>
    <inlineHelpText>How many seconds of talk time have I spent on calls to other internal users in my organisation as a logical From party, but where the call had been transferred to me</inlineHelpText>
    <label>Internal From Talk Seconds as Transferee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>