unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Month_Name_Numeric__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Month_Name_Numeric__c</fullName>
    <description>Numeric representation of month for the hour of the call record</description>
    <formula>MONTH( DATEVALUE(nbavs__Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Numeric representation of month for the hour of the call record</inlineHelpText>
    <label>Month Name Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>