unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Outbound_Connected_Calls_Primary_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Outbound_Connected_Calls_Primary_User__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of outbound calls that have been made by the User regardless of whether those calls connected or not. Note that calls to internal extensions that don&#39;t connect are also regarded as outbound calls. This statistic only records where the originator has not transferred the call, i.e. the originator actually dialled the initial call.</description>
    <inlineHelpText>How many calls did I make outbound from my organisation where the call was not transferred</inlineHelpText>
    <label>Outbound Calls as Primary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>