unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Outbound_Connected_Calls_Subsequent_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Outbound_Connected_Calls_Subsequent_User__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of outbound calls where the User has become a transferree on the call.</description>
    <inlineHelpText>How many outbound calls did I take part in, where the call was transferred to me</inlineHelpText>
    <label>Outbound Calls as Transferree</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>