unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Outbound_Talk_Seconds_Subsequent_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Outbound_Talk_Seconds_Subsequent_User__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of seconds spent talking on outbound calls where the User has become a transferree on the call.</description>
    <inlineHelpText>How many calls did I make outbound from my organisation where the call was not transferred</inlineHelpText>
    <label>Outbound Talk Seconds as Transferree</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>