unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__PrecalcUserTimezoneOffset__c.field-meta.xml
<CustomField>
    <fullName>nbavs__PrecalcUserTimezoneOffset__c</fullName>
    <description>User timezone offset calculated in trigger, pre-insert (NBSFPBX-1091)</description>
    <label>Precalculated user timezone offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>