unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Service_Calls__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Service_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of service calls that have been made.</description>
    <inlineHelpText>How many service calls have I made</inlineHelpText>
    <label>Service Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>