unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Service_Talk_Seconds__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Service_Talk_Seconds__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of seconds of talk time incurred on service calls made by user in the organisation</description>
    <inlineHelpText>How many seconds of talk time have been incurred by service calls I have made</inlineHelpText>
    <label>Service Talk Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>