unpackaged/main/default/objects/nbavs__Hourly_Call_Reporting__c/fields/nbavs__Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Time__c</fullName>
    <description>A date time field that will be rolled every hour</description>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>